Changed how Footer looks on mobile (text fix)

--- a/src/style.css
+++ b/src/style.css
@@ -142,15 +142,15 @@ footer{
 }
 
 footer h1{
-  font-size: 5vw;
+  font-size: 450%;
 }
 
 footer h2{
-  font-size: 3vw;
+  font-size: 200%;
 }
 
 footer p{
-  font-size: 2vw;
+  font-size: 150%;
 }
 
 footer a{
